--- a/merch-page/package.json
+++ b/merch-page/package.json
@@ -1,21 +1,3 @@
 {
-  "name": "waterway-cleanups-merchandise-page",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "@stripe/stripe-js": "^7.9.0"
-  },
-  "devDependencies": {
-    "@types/node": "^22.14.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
-  }
+  "type": "module"
 }
