--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ resources/_gen/
 
 # Include public products data
 !public/data/products.json
+!public/data/products.test.json
 
 # OS files
 .DS_Store
