Implement comprehensive product management system with variants (#45)
* Implement comprehensive product management system with variants

Add complete product variant system with the following features:

Core System:
- Flexible product data model with dimensions and variants
- JSON-based storage for static site compatibility
- Support for multiple product attributes (size, color, etc.)
- Individual variant pricing and inventory tracking

Stripe Integration:
- Each variant creates separate Stripe product + price
- Automatic synchronization with metadata linking
- Handles price changes with new price creation
- Cleanup of unused Stripe products

Frontend Features:
- Dynamic variant selection with cascading options
- Smart inventory display and out-of-stock handling
- Updated cart system supporting variant-based items
- Price display showing ranges or specific variant prices

Admin Interface:
- Product creation and management via CLI
- Variant overview with Stripe sync status
- Dimension and value management
- Comprehensive product details view

Developer Tools:
- New sync script for variant-to-Stripe synchronization
- Comprehensive documentation and schema definitions
- Type safety with complete TypeScript definitions
- Backward compatibility with existing system

Example: T-shirt with 3 colorways × 5 sizes = 15 Stripe products

* Remove unnecessary files from merch-page

* Update documentation for product management changes

- Rename sync-products-with-variants.js to sync-products.js

* Update products

* Added products

* Use full URL in upload links in product file, sync to stripe dev

* Fix path finding to products.json in git

* Add toast notifications for cart actions

Provides immediate visual feedback when customers add items to their cart. Toast notifications use brand blue color, display product details including selected variants, and appear prominently in the top-right corner for 4 seconds.

* Add checkout success handling and order confirmation modal

Afte

--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,15 @@ node_modules/
 jspm_packages/
 
 # Build directory
-public/
+public/*
+!public/data/
+public/data/*
 resources/_gen/
 .hugo_build.lock
+
+# Include public products data
+!public/data/products.json
+!public/data/products.test.json
 
 # OS files
 .DS_Store
