--- a/data/en/footer.yaml
+++ b/data/en/footer.yaml
@@ -9,7 +9,7 @@ menuitems:
   - title: Sponsors
     link:  /#sponsors
   - title: Donate
-    link:  https://collect.bankingcrowded.com/collection/fbacead4-04ff-406a-b1fe-8cea2af39eb3
+    link:  https://collect.crowded.me/collection/3d678868-046a-4399-99e7-8f1b09b7485f
 socials:
   - title: Discord
     link: https://discord.gg/waterwaycleanups
