Adding Team Page

--- a/data/en/header.yaml
+++ b/data/en/header.yaml
@@ -9,6 +9,8 @@ menuitems:
     link: /#cleanups
   - title: Projects
     link: /projects/
+  - title: Our Team
+    link: /team/
   - title: Sponsors
     link: /#sponsors
   - title: Volunteer
