Adding Jeff Eastland as Volunteer Lead

--- a/data/en/people.yaml
+++ b/data/en/people.yaml
@@ -15,3 +15,8 @@
   description: "Kerri is our Treasurer, overseeing financial operations and budget management for Waterway Cleanups. Her financial acumen helps ensure responsible stewardship of our resources and sustainable growth of the organization. Kerri also works closely with sponsors to secure funding for our environmental initiatives."
   linkedin: "https://www.linkedin.com/in/kerri-posteraro/"
   image: "/uploads/team/kerri-posteraro.jpg"
+
+- name: "Jeff Eastland"
+  function: "Volunteer Lead"
+  description: "With a background rooted in the very first Environmental Studies program in the U.S., Jeff has spent decades practicing organic farming, contributing to environmental publications, and advancing ecological stewardship. He currently leads local initiatives to protect Stafford’s natural resources, drawing on a deep history of activism that spans from the very first Earth Day to the present."
+  image: "/uploads/team/jeff-eastland.jpg"
