--- a/.github/workflows/promote-to-production.yml
+++ b/.github/workflows/promote-to-production.yml
@@ -22,19 +22,10 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v5
         with:
           fetch-depth: 0
           ref: ${{ inputs.commit_sha || 'main' }}
-
-      - name: Verify commit exists on main
-        run: |
-          COMMIT_SHA="${{ inputs.commit_sha || github.sha }}"
-          if ! git merge-base --is-ancestor $COMMIT_SHA origin/main; then
-            echo "❌ Error: Commit $COMMIT_SHA is not on the main branch"
-            exit 1
-          fi
-          echo "✅ Commit $COMMIT_SHA is on main branch"
 
       - name: Update prod tag
         run: |
@@ -54,7 +45,7 @@ jobs:
           echo "✅ Updated prod tag to $(git rev-parse --short $COMMIT_SHA)"
 
       - name: Slack Notification - Promotion Started
-        uses: slackapi/slack-github-action@v2.1.0
+        uses: slackapi/slack-github-action@v2
         with:
           webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
           webhook-type: incoming-webhook
@@ -72,3 +63,28 @@ jobs:
     with:
       environment: production
     secrets: inherit
+
+  create-date-release:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v5
+
+      - name: Generate next date-based release tag
+        id: generate_release_tag
+        uses: "amitsingh-007/next-release-tag@v6" #
+        with:
+          tag_prefix: ""
+          tag_template: "yyyy.mm.dd.i" # Example format: 2026.01.09.1
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: ${{ steps.generate_release_tag.outputs.next_release_tag }}
+          name: "Release ${{ steps.generate_tag.outputs.next_release_tag }}"
+          token: ${{ secrets.GITHUB_TOKEN }}
+          # draft: false
+          # prerelease: false
+          generate_release_notes: true
