Only cut the release after successful deployment.

--- a/.github/workflows/promote-to-production.yml
+++ b/.github/workflows/promote-to-production.yml
@@ -66,6 +66,7 @@ jobs:
 
   create-date-release:
     runs-on: ubuntu-latest
+    needs: deploy-production
 
     steps:
       - name: Checkout repository
