--- a/.github/workflows/promote-to-production.yml
+++ b/.github/workflows/promote-to-production.yml
@@ -76,7 +76,7 @@ jobs:
         id: generate_release_tag
         uses: "amitsingh-007/next-release-tag@v6.3.0" #
         with:
-          tag_prefix: ""
+          tag_prefix: "deploy/"
           tag_template: "yyyy.mm.dd.i" # Example format: 2026.01.09.1
           github_token: ${{ secrets.GITHUB_TOKEN }}
           
