--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
     permissions:
       id-token: write
       contents: read
-      pull-requests: write  # For PR comments
+      pull-requests: write
 
     steps:
       - name: Checkout code
