Fix proper base urls

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -185,6 +185,7 @@ jobs:
           echo "website_url=$(terraform output -raw website_url)" >> $GITHUB_OUTPUT
           echo "api_base_url=$(terraform output -raw api_base_url)" >> $GITHUB_OUTPUT
           echo "api_base_url_volunteer=$(terraform output -raw api_base_url_volunteer)" >> $GITHUB_OUTPUT
+          echo "events_api_url=$(terraform output -raw events_api_url)" >> $GITHUB_OUTPUT
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -241,6 +242,7 @@ jobs:
           HUGO_ENV: ${{ env.DEPLOY_ENV }}
           HUGO_API_BASE_URL: ${{ steps.tf-outputs.outputs.api_base_url }}
           HUGO_API_BASE_URL_VOLUNTEER: ${{ steps.tf-outputs.outputs.api_base_url_volunteer }}
+          HUGO_EVENTS_API_URL: ${{ steps.tf-outputs.outputs.events_api_url }}
 
       - name: Deploy to S3
         if: env.IS_PR != 'true'
