Show all events

--- a/data/settings.yaml
+++ b/data/settings.yaml
@@ -7,6 +7,7 @@ customcursor: false
 intersectionobserver: true
 filter_has_numbers: true
 page_size: 3
+show_all_events: true
 show_all_services: true
 preheader: 
   active: true
