--- a/package.json
+++ b/package.json
@@ -45,9 +45,24 @@
     "deploy:database:force": "node scripts/deploy-with-database.js --environment=staging --force-migration",
     "deploy:database:verbose": "node scripts/deploy-with-database.js --environment=staging --verbose",
     "validate:deployment": "node scripts/validate-deployment.js --environment=staging",
-    "validate:deployment:prod": "node scripts/validate-deployment.js --environment=prod"
+    "validate:deployment:prod": "node scripts/validate-deployment.js --environment=prod",
+    "test:e2e": "playwright test",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:chromium": "playwright test --project=chromium",
+    "test:e2e:firefox": "playwright test --project=firefox",
+    "test:e2e:webkit": "playwright test --project=webkit",
+    "test:e2e:auth": "playwright test tests/e2e/auth",
+    "test:e2e:waiver": "playwright test tests/e2e/waiver",
+    "test:e2e:rsvp": "playwright test tests/e2e/rsvp",
+    "test:e2e:minors": "playwright test tests/e2e/minors",
+    "test:e2e:smoke": "playwright test --grep @smoke",
+    "test:e2e:report": "playwright show-report test-results/html-report",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:ci": "playwright test --reporter=html,json,junit"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.969.0",
     "@aws-sdk/client-s3": "^3.826.0",
     "@tailwindcss/cli": "^4.1.8",
     "@tailwindcss/postcss": "^4.1.8",
@@ -63,6 +78,8 @@
     "@babel/core": "^7.26.10",
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
+    "@playwright/test": "^1.57.0",
+    "@types/node": "^25.0.8",
     "autoprefixer": "^10.4.19",
     "babel-loader": "^10.0.0",
     "concurrently": "^8.2.2",
@@ -75,6 +92,7 @@
     "stripe": "^18.5.0",
     "style-loader": "^3.3.4",
     "tailwindcss": "^4.1.8",
+    "typescript": "^5.9.3",
     "webpack": "^5.99.7",
     "webpack-cli": "^6.0.1"
   },
