--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -10,6 +10,9 @@ jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
     
     strategy:
       fail-fast: false
@@ -21,6 +24,13 @@ jobs:
       uses: actions/checkout@v4
       with:
         submodules: recursive
+
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v4
+      with:
+        role-to-assume: arn:aws:iam::767072126027:role/github-actions-oidc
+        aws-region: us-east-1
+        role-session-name: github-actions-playwright
 
     - name: Setup Node.js
       uses: actions/setup-node@v4
@@ -106,3 +116,17 @@ jobs:
         path: test-results/artifacts/**/*.zip
         retention-days: 30
         if-no-files-found: ignore
+
+    - name: Slack Notification
+      if: always() && github.event_name != 'pull_request'
+      uses: slackapi/slack-github-action@v2.1.0
+      with:
+        webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
+        webhook-type: incoming-webhook
+        payload: |
+          text: "*Playwright Tests (${{ matrix.browser }})*: ${{ job.status }}"
+          blocks:
+            - type: "section"
+              text:
+                type: "mrkdwn"
+                text: "${{ job.status == 'success' && '✅' || '❌' }} Playwright Tests (*${{ matrix.browser }}*): ${{ job.status }}\nBranch: ${{ github.ref_name }}\nCommit: <${{ github.server_url }}/${{ github.repository }}/commit/${{ github.sha }}|${{ github.sha }}>\nRun: <${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|View logs>"
