--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        browser: [chromium, firefox, webkit]
+        browser: [chromium, firefox, webkit, Google Chrome]
     
     steps:
     - name: Checkout code
@@ -42,7 +42,13 @@ jobs:
       run: npm ci
 
     - name: Install Playwright Browsers
-      run: npx playwright install --with-deps ${{ matrix.browser }}
+      run: |
+        # Map project name to browser name for installation
+        if [ "${{ matrix.browser }}" = "Google Chrome" ]; then
+          npx playwright install --with-deps chromium
+        else
+          npx playwright install --with-deps ${{ matrix.browser }}
+        fi
 
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v3
