--- a/config/development/params.yaml
+++ b/config/development/params.yaml
@@ -1,3 +1,4 @@
 api:
   base_url: "https://ppiqomgl8a.execute-api.us-east-1.amazonaws.com/staging"
-  base_url_volunteer: "https://882dzmsoy5.execute-api.us-east-1.amazonaws.com/staging"
+  base_url_volunteer: "https://9ea4ntcq8f.execute-api.us-east-1.amazonaws.com/staging"
+  events_api_url: "https://o2pkfnwqq4.execute-api.us-east-1.amazonaws.com/staging"
