--- a/package.json
+++ b/package.json
@@ -46,8 +46,9 @@
     "deploy:database:verbose": "node scripts/deploy-with-database.js --environment=staging --verbose",
     "validate:deployment": "node scripts/validate-deployment.js --environment=staging",
     "validate:deployment:prod": "node scripts/validate-deployment.js --environment=prod",
-    "test:e2e": "playwright test",
-    "test:e2e:headed": "playwright test --headed",
+    "test:e2e": "playwright test --project=chromium --project=firefox",
+    "test:e2e:headed": "playwright test --headed --project=chromium",
+    "test:e2e:ui": "playwright test --ui --project=chromium",
     "test:e2e:debug": "playwright test --debug",
     "test:e2e:chromium": "playwright test --project=chromium",
     "test:e2e:firefox": "playwright test --project=firefox",
