--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        browser: [chromium, firefox, webkit, chrome]
+        browser: [chromium, firefox, webkit, chrome, mobile-chrome, mobile-safari, tablet]
     
     steps:
     - name: Checkout code
@@ -46,6 +46,10 @@ jobs:
         # Map project name to browser name for installation
         if [ "${{ matrix.browser }}" = "chrome" ]; then
           npx playwright install --with-deps chromium
+        elif [ "${{ matrix.browser }}" = "mobile-chrome" ]; then
+          npx playwright install --with-deps chromium
+        elif [ "${{ matrix.browser }}" = "mobile-safari" ] || [ "${{ matrix.browser }}" = "tablet" ]; then
+          npx playwright install --with-deps webkit
         else
           npx playwright install --with-deps ${{ matrix.browser }}
         fi
